@@ -5,6 +5,8 @@
 	- fix bug 883518: keyboard gets locked until icewm menu is activated
 	- double buffering fixes
 	- French translation update
+	- menuprogreload menu keyword added (Konstantin Korikov)
+	  syntax: menuprogreload title icon timeout command ...
 
 1.2.15pre3: 2004-08-01
 	- icesound gcc 2.95.3 compile fix (Thomas Zajic)
